--- a/deploy/deploy.yaml
+++ b/deploy/deploy.yaml
@@ -22,7 +22,7 @@ spec:
         "beta.kubernetes.io/os": linux
       containers:
       - name: faq-frontend
-        image: oxfaq.azurecr.io/faq-frontend:130e37df4c1c80c497ccd22b97f99f15226da15f
+        image: oxfaq.azurecr.io/faq-frontend:091ad4074782530f4c52554f3ddaa1fe23351750
         envFrom:
             - secretRef:
                 name: openai-secret
@@ -58,6 +58,7 @@ metadata:
     nginx.ingress.kubernetes.io/use-gzip: "true"
     nginx.ingress.kubernetes.io/use-http2: "true"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    appgw.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   tls:
   - hosts:
