--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-i18next": "^12.2.0",
     "react-markdown": "^8.0.5",
     "react-modal": "^3.16.1",
+    "react-random-avatars": "^1.3.1",
     "react-router-dom": "^6.11.2",
     "react-scroll-to-bottom": "^4.2.0",
     "react-simple-typewriter": "^5.0.1",
