--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
