--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.1.3",
     "react-typewriter-hook": "^1.0.1",
+    "react-use": "^17.4.0",
     "rehype-highlight": "^6.0.0",
     "rehype-katex": "^6.0.2",
     "remark-gfm": "^3.0.1",
