--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@react-oauth/google": "^0.9.0",
     "@sentry/react": "^7.55.0",
     "@tabler/icons-react": "^2.20.0",
+    "@types/mixpanel-browser": "^2.47.1",
     "@types/react-modal": "^3.16.0",
     "@types/react-syntax-highlighter": "^15.5.7",
     "@web3modal/ethereum": "^2.6.2",
@@ -69,6 +70,7 @@
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
+    "mixpanel-browser": "^2.47.0",
     "moment": "^2.29.4",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
