--- a/package.json
+++ b/package.json
@@ -110,6 +110,8 @@
     "electron": "^23.2.0",
     "electron-builder": "^23.6.0",
     "postcss": "^8.4.21",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "tailwindcss": "^3.2.7",
     "typescript": "^5.0.4",
     "vite": "^4.1.0",
