--- a/.github/workflows/azure-kubernetes-service.yml
+++ b/.github/workflows/azure-kubernetes-service.yml
@@ -43,6 +43,9 @@ env:
   DEPLOYMENT_MANIFEST_PATH: "deploy/deploy.yaml"
   VITE_PUBLIC_PATH: "/"
   VITE_SERVER_API_ENDPOINT: "https://api.qna3.ai"
+  VITE_RUNTIME_ENV: "production"
+  VITE_AUTH0_ID: "d2lXoGguxROpIsbBChdHbJzqvwkhPnj6"
+
 
   
 jobs:
@@ -73,6 +76,8 @@ jobs:
           --build-arg VITE_SERVER_API_ENDPOINT=${{ env.VITE_SERVER_API_ENDPOINT }} \
           --build-arg VITE_OPENAI_API_KEY=${{ secrets.VITE_OPENAI_API_KEY }} \
           --build-arg VITE_PUBLIC_PATH=${{env.VITE_PUBLIC_PATH}} \
+          --build-arg VITE_AUTH0_ID=${{env.VITE_AUTH0_ID}} \
+          --build-arg VITE_RUNTIME_ENV=${{env.VITE_RUNTIME_ENV}} \
           --image ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME }}:${{ github.sha }} \
           --registry ${{ env.AZURE_CONTAINER_REGISTRY }} \
           -g ${{ env.RESOURCE_GROUP }} .
