--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-i18next": "^12.2.0",
     "react-markdown": "^8.0.5",
     "react-modal": "^3.16.1",
