--- a/.github/workflows/azure-kubernetes-service-staging.yml
+++ b/.github/workflows/azure-kubernetes-service-staging.yml
@@ -45,7 +45,7 @@ env:
   VITE_SERVER_API_ENDPOINT: "https://staging-api.qna3.ai"
   VITE_RUNTIME_ENV: "staging"
   VITE_AUTH0_ID: "X8AK61I6S8eaHIMxAXWyP7qph1WBTV3T"
-  
+  VITE_SENTRY_AUTH_TOKEN: "ffa19fe74ae918ee3a116514970275f74d0ae46902eeaf1076d01d7107c44c2d"
   
 jobs:
   buildImage:
@@ -77,6 +77,7 @@ jobs:
           --build-arg VITE_PUBLIC_PATH=${{env.VITE_PUBLIC_PATH}} \
           --build-arg VITE_AUTH0_ID=${{env.VITE_AUTH0_ID}} \
           --build-arg VITE_RUNTIME_ENV=${{env.VITE_RUNTIME_ENV}} \
+          --build-arg VITE_SENTRY_AUTH_TOKEN=${{env.VITE_SENTRY_AUTH_TOKEN}} \
           --image ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME }}:${{ github.sha }} \
           --registry ${{ env.AZURE_CONTAINER_REGISTRY }} \
           -g ${{ env.RESOURCE_GROUP }} .
