--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     }
   },
   "dependencies": {
+    "@amplitude/analytics-browser": "^2.1.3",
     "@auth0/auth0-react": "^2.1.0",
     "@dqbd/tiktoken": "^1.0.2",
     "@headlessui/react": "^1.7.15",
