--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "homepage": "./",
   "main": "electron/index.cjs",
-  "author": "Jing Hua <betterchatgpt@mail.tjh.sg>",
+  "author": "Tan <github.com/TanGentleman>",
   "description": "Play and chat smarter with BetterChatGPT - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API!",
   "scripts": {
     "dev": "vite",
@@ -45,6 +45,7 @@
   "dependencies": {
     "@dqbd/tiktoken": "^1.0.2",
     "@react-oauth/google": "^0.9.0",
+    "core-js": "^3.32.2",
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "electron-updater": "^5.3.0",
