Added prompt autocomplete feature

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "electron-updater": "^5.3.0",
+    "fast-levenshtein": "^3.0.0",
     "html2canvas": "^1.4.1",
     "i18next": "^22.4.11",
     "i18next-browser-languagedetector": "^7.0.1",
@@ -55,6 +56,7 @@
     "jspdf": "^2.5.1",
     "katex": "^0.16.4",
     "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "match-sorter": "^6.3.1",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
@@ -71,7 +73,10 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
+    "@types/dompurify": "^3.0.3",
+    "@types/fast-levenshtein": "^0.0.2",
     "@types/lodash": "^4.14.192",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/papaparse": "^5.3.7",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -80,6 +85,7 @@
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "concurrently": "^8.0.1",
+    "dompurify": "^3.0.6",
     "electron": "^23.2.0",
     "electron-builder": "^23.6.0",
     "postcss": "^8.4.21",
