--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "electron-updater": "^6.1.1",
+    "fs-extra": "^11.2.0",
     "html2canvas": "^1.4.1",
     "i18next": "^23.2.11",
     "i18next-browser-languagedetector": "^7.1.0",
@@ -67,6 +68,7 @@
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "uuid": "^9.0.0",
+    "web-streams-polyfill": "^3.2.1",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
