--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "homepage": "./",
   "main": "electron/index.cjs",
-  "author": "Slendy_Milky",
+  "author": "Jing Hua <betterchatgpt@mail.tjh.sg>",
   "description": "Play and chat smarter with BetterChatGPT - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API!",
   "scripts": {
     "dev": "vite",
