--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@
 VITE_CUSTOM_API_ENDPOINT=
 VITE_DEFAULT_API_ENDPOINT=
 VITE_OPENAI_API_KEY=
-VITE_DEFAULT_SYSTEM_MESSAGE=     # Remove this line if you want to use the default system message of Better ChatGPT
+VITE_DEFAULT_SYSTEM_MESSAGE=     # Remove this line if you want to use the default system message of GPT-CX
 VITE_GOOGLE_CLIENT_ID=           # for syncing data with google drive
