--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Build website
         run: yarn build
-        env:
-          VITE_GOOGLE_CLIENT_ID: ${{ secrets.GCLIENT }}
+        # env:
+        #   VITE_GOOGLE_CLIENT_ID: ${{ secrets.GCLIENT }}
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
