--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "t1a-chatgpt",
+  "name": "custom-chatgpt",
   "private": true,
   "version": "1.0.4",
   "type": "module",
@@ -16,8 +16,8 @@
     "make": "yarn build && electron-builder"
   },
   "build": {
-    "appId": "t1a-chatgpt",
-    "productName": "T1A ChatGPT",
+    "appId": "custom-chatgpt",
+    "productName": "Custom ChatGPT",
     "artifactName": "${os}-${name}-${version}-${arch}.${ext}",
     "directories": {
       "output": "release"
