Add prettier script to package.json

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "preview": "vite preview",
     "electron": "concurrently -k \"BROWSER=none yarn dev\" \"wait-on tcp:5173 && electron .\"",
     "pack": "yarn build && electron-builder --dir",
-    "make": "yarn build && electron-builder"
+    "make": "yarn build && electron-builder",
+    "prettier": "prettier --write ."
   },
   "build": {
     "appId": "better-chatgpt",
