--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "electron": "^24.8.5",
     "electron-builder": "^24.13.3",
     "postcss": "^8.4.31",
+    "prettier": "^10.5.0",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
     "vite": "^4.5.2",
