--- a/.github/workflows/azure-static-web-apps-dev.yml
+++ b/.github/workflows/azure-static-web-apps-dev.yml
@@ -3,17 +3,12 @@ name: Azure Static Web Apps CI/CD
 on:
   push:
     branches:
-      - main
-  pull_request:
-    types: [opened, synchronize, reopened, closed]
-    branches:
-      - main
+      - dev
 
 jobs:
   build_and_deploy_job:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
-    environment: prod
+    environment: dev
     name: Build and Deploy Job
     steps:
       - uses: actions/checkout@v3
