--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
   "description": "Play and chat smarter with GPT-CX - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API!",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
-    "pack": "yarn build && electron-builder --dir",
-    "make": "yarn build && electron-builder",
     "prettier": "prettier --write ."
   },
   "build": {
