--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,12 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+node_modules/
 dist
 dist-ssr
 *.local
+
+dist/
 
 # Editor directories and files
 .vscode/*
