--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
   "name": "gpt-cx",
   "private": true,
-  "version": "1.0.5",
+  "version": "1.0.6",
   "type": "module",
   "homepage": "gpt.wemake.cx",
-  "author": "💙 WeMake <hey@wemake.cx>",
+  "author": "Florentin @ 💙 WeMake",
   "description": "Chat smarter with GPT-CX",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "prettier": "prettier --write ."
-  },
-  "build": {
-    "appId": "gpt-cx",
-    "productName": "GPT-CX",
-    "artifactName": "${os}-${name}-${version}-${arch}.${ext}"
   },
   "dependencies": {
     "@dqbd/tiktoken": "^1.0.2",
