--- a/.github/workflows/sync-to-gitlab.yml
+++ b/.github/workflows/sync-to-gitlab.yml
@@ -1,21 +1,21 @@
-name: Sync to GitLab
+# name: Sync to GitLab
 
-on:
-  push:
-  workflow_dispatch:
+# on:
+#   push:
+#   workflow_dispatch:
 
-jobs:
-  sync:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout GitHub repository
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
+# jobs:
+#   sync:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - name: Checkout GitHub repository
+#       uses: actions/checkout@v2
+#       with:
+#         fetch-depth: 0
 
-    - name: Push to GitLab
-      env:
-        GITLAB_TOKEN: ${{ secrets.GITLAB_ACCESS_TOKEN }}
-      run: |
-        git remote add gitlab https://oauth2:${GITLAB_TOKEN}@gitlab.com/zewebdev1337/devGPT-base.git
-        git push gitlab HEAD:main
+#     - name: Push to GitLab
+#       env:
+#         GITLAB_TOKEN: ${{ secrets.GITLAB_ACCESS_TOKEN }}
+#       run: |
+#         git remote add gitlab https://oauth2:${GITLAB_TOKEN}@gitlab.com/zewebdev1337/devGPT-base.git
+#         git push gitlab HEAD:main
