action on PR also

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,8 @@ on:
   push:
     branches:
       -'**'
-
+  pull_request:
+    types: [opened, synchronize, reopened]
 jobs:
   build:
     runs-on: self-hosted
